# c_project_templates

binary/: Makefile
binary/mk/: bin.mk
make/binary/: Makefile
make/binary/mk/: bin.mk
meson/binary/: meson.build
meson/binary/include/: hello.h
meson/binary/src/: main.c
